--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,21 +4,25 @@ on: [push]
 
 jobs:
   sast_scan:
-    name: Run Bandit Scan
+    name: Run CodeQL Scan
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: false
+      matrix:
+        language: [ 'python' ]
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v5
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v3
       with:
-        python-version: 3.8
+        languages: 'python'
         
-    - name: Install Bandit
-      run: pip install bandit
-
-    - name: Run Bandit Scan
-      run: bandit -ll -ii -r .
+    - name: Perform Analysis
+      uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:{{matrix.language}}"
         
