--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,4 +25,16 @@ jobs:
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:{{matrix.language}}"
+
+  dast_scan:
+    runs-on: ubuntu-latest
+    name: Scan a vulnerable app from the web
+    steps:
+      - name: OWASP ZAP Scan
+        uses: zaproxy/action-baseline@v0.6.1
+        with:
+          docker_name: 'owasp/zap2docker-stable'
+          target: 'http://testphp.vulnweb.com/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
         
